--- a/tasks/templates/tasks/edit_task.html
+++ b/tasks/templates/tasks/edit_task.html
@@ -5,7 +5,8 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card card-body">
-                <form action="" method="post">
+                <form action="" method="POST">
+                    {% csrf_token %}
                     {{ form.as_p }}
                     <a href="{% url 'home' %}" class="btn btn-warning">Cancel</a>
                     <input class="btn btn-success" type="submit" name="submit" value="Confirm">
