--- a/tasks/templates/tasks/navbar.html
+++ b/tasks/templates/tasks/navbar.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <!-- <a href="https://www.flaticon.com/free-icons/list" title="list icons">List icons created by Kiranshastry - Flaticon</a> -->
     <div class="collapse navbar-collapse" id="navbarNav">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'home' %}">
            <img id='logo' src="{% static 'images/logo.png' %}" alt="logo image">
         </a>
         <ul class="navbar-nav">
