--- a/tasks/static/css/style.css
+++ b/tasks/static/css/style.css
@@ -1,16 +1,21 @@
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Raleway', sans-serif;
+}
+
 #logo{
   width: 30px;
   height: 30px;
 }
 
-.site_footer {
-    background-color: #1111;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	padding: 5px;
-
-}
 
 .table{
     margin-top: 30px;
@@ -20,14 +25,9 @@
     height: 100%;
 }
 
-/*.table_icons{*/
-/*    text-align: center;*/
-/*    width: 100px;*/
-/*    !*margin-left: -px;*!*/
-/*    !*margin-bottom: auto;*!*/
-/*}*/
 
 .table_icon img{
+    margin-top: 5px;
     width: 13px;
     height: 13px;
     float: left;
@@ -36,6 +36,27 @@
 
 .new_task_button{
     margin-top: 10px;
+    text-align: center;
+}
+
+.searching{
+    margin-top: 20px;
+    text-align: center;
+}
+
+#q{
+    height: 38px;
+    border-radius: 4px;
+}
+
+.container {
+    max-width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #fff;
+    -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+    box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+    padding-bottom: 10px;
     text-align: center;
 }
 
