--- a/tasks/templates/tasks/add_task.html
+++ b/tasks/templates/tasks/add_task.html
@@ -1,16 +1,20 @@
+{% extends 'tasks/base.html' %}
 {% block content %}
     <br>
-
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card card-body">
-                    <form action="" method="POST">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit" name="Submit">
-                    </form>
-                </div>
-            </div>
+    <div class="col-md-12">
+        <div class="container">
+            <form action="" method="POST">
+                {% csrf_token %}
+                {% for field in form %}
+                    <strong>{{ field.label }}:</strong>
+                    <br/>
+                    {{ field }}
+                    <br/>
+                    <br/>
+                {% endfor %}
+                <a href="{% url 'home' %}" class="btn btn-warning">Cancel</a>
+                <input class="btn btn-success" type="submit" name="submit" value="Confirm">
+            </form>
         </div>
-    <br>
+    </div>
 {% endblock %}
