--- a/tasks/templates/tasks/edit_task.html
+++ b/tasks/templates/tasks/edit_task.html
@@ -2,17 +2,20 @@
 {#{% load static %}#}
 {% block content %}
     <br/>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card card-body">
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <a href="{% url 'home' %}" class="btn btn-warning">Cancel</a>
-                    <input class="btn btn-success" type="submit" name="submit" value="Confirm">
-                </form>
-
-            </div>
+    <div class="col-md-12">
+        <div class="container">
+            <form action="" method="POST">
+                {% csrf_token %}
+                {% for field in form %}
+                    <strong>{{ field.label }}:</strong>
+                    <br/>
+                    {{ field }}
+                    <br/>
+                    <br/>
+                {% endfor %}
+                <a href="{% url 'home' %}" class="btn btn-warning">Cancel</a>
+                <input class="btn btn-success" type="submit" name="submit" value="Confirm">
+            </form>
         </div>
     </div>
 {% endblock %}
